refactor(domain): remove legados e implementa arquivamento
